# cognitive-games

./: .gitignore  .npmrc  Cargo.toml  README.md  _headers  index.html  lint.md  package-lock.json  package.json  webpack.config.js  wrangler.toml
.cargo/: config.toml
.github/prompts/: mental-rotation.prompt.md
pkg/: index.html
src/: lib.rs
src/games/: mod.rs
src/games/mental_rotation/: grid.rs  input.rs  level_generator.rs  mod.rs  rotation.rs  tile.rs  tile_generator.rs  timer.rs
src/games/numeracy/: expression.rs  level.rs  mod.rs  state.rs
src/games/perception/: input.rs  maze.rs  mod.rs  movement.rs  render.rs  state.rs  timer.rs
src/modules/perception/: maze.rs  mod.rs  movement.rs  render.rs  state.rs
src/utils/: mod.rs
static/: index.html  mental-rotation.html  numeracy.html  perception.html  styles.css
