[package]
name = "cognitive-games"
description = "Brain training games with Rust and WebAssembly"
version = "0.1.0"
authors = ["Umar Sharief"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.45"
js-sys = "0.3.22"
wee_alloc = { version = "0.4.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.5"

[dependencies.web-sys]
version = "0.3.22"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Window",
    "Event",
    "EventTarget",
    "KeyboardEvent",
    "MouseEvent",
    "CustomEvent", 
    "CustomEventInit",
    "Storage",
    "DomTokenList",
    "Performance"
]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
wasm-bindgen-futures = "0.3.22"
