[package]
name = "cognitive-games"
description = "Brain training games with Rust and WebAssembly"
version = "0.1.0"
authors = ["Umar Sharief"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"
license = "MIT"
repository = "https://github.com/noneofyourbusiness1415252/cognitive-games"  # Add repository

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
default = ["console_error_panic_hook"]
wee_alloc = ["dep:wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.45"
js-sys = "0.3.22"
wee_alloc = { version = "0.4.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.5"
console_error_panic_hook = { version = "0.1.5", optional = true }

[dependencies.web-sys]
version = "0.3.22"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCollection",
    "Window",
    "Event",
    "EventTarget",
    "KeyboardEvent",
    "MouseEvent",
    "CustomEvent", 
    "CustomEventInit",
    "Storage",
    "DomTokenList",
    "Location",
    "Performance",
    "Text",
]

[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
wasm-bindgen-futures = "0.3.22"