[package]
name = "cognitive-games"
description = "Brain training games with Rust and WebAssembly"
version = "0.1.0"
authors = ["Umar Sharief"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"
license = "MIT"
repository = "https://github.com/noneofyourbusiness1415252/cognitive-games"  # Add repository

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]
default = ["console_error_panic_hook"]
wee_alloc = ["dep:wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.45"
js-sys = "0.3.22"
wee_alloc = { version = "0.4.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.5"
console_error_panic_hook = { version = "0.1.5", optional = true }
lazy_static = "1.5.0"

[dependencies.web-sys]
version = "0.3.77"
features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCollection",
    "Window",
    "Event",
    "EventTarget",
    "KeyboardEvent",
    "MouseEvent",
    "CustomEvent", 
    "CustomEventInit",
    "Storage",
    "DomTokenList",
    "Location",
    "Performance",
    "Text",
    "Animation",
    "KeyframeAnimationOptions",
]

[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
wasm-bindgen-futures = "0.3.22"

[build]
rustflags = ["--cfg=web_sys_unstable_apis"]

[lints.clippy]
pedantic = "warn"
# These lints must be allowed due to:
# - cast_possible_wrap: Required for maze generation algorithm
# - cast_precision_loss: Required for random number generation
# - cast_sign_loss: Required for various game algorithms
# - cast_possible_truncation: Required for various game algorithms 
# - unsafe_derive_deserialize: Required for game state serialization
# - missing_errors_doc, missing_panics_doc: Acceptable for game codebase
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow" 
cast_possible_truncation = "allow"
unsafe_derive_deserialize = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
